--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p>The man who saved a billion lives</p>
     <div class="image.html">
 <figure>
- <img src="images/norman.jpg" width="700" height="400" 
+ <img src="norman.jpg" width="700" height="400" 
  <figcaption> <br> Dr. Norman Borlaug, third from the left, <br> trains biologists in Mexico on how to increase <br> wheat yields - part of his life-long war on <br>hunger. </figcaption> 
 </figure>
   </div>
