--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Tribute Page</title>
   <link href="style2.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
  
-    <section id="fact">
+<section id="fact">
 <h1>Dr. Norman Borlaug</h1> 
   </section>
   <p>The man who saved a billion lives</p>
