--- a/index.html
+++ b/index.html
@@ -1,69 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Tribute Page</title>
-  <link href="style2.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <title>Tribute Page</title>
 </head>
 <body>
- 
-<section id="fact">
-<h1>Dr. Norman Borlaug</h1> 
-  </section>
-  <p>The man who saved a billion lives</p>
-    <div class="image.html">
-<figure>
- <img src="norman.jpg" width="700" height="400" 
- <figcaption> <br> Dr. Norman Borlaug, third from the left, <br> trains biologists in Mexico on how to increase <br> wheat yields - part of his life-long war on <br>hunger. </figcaption> 
-</figure>
+<main id='main'>
+  <h1 id='title'>Dr. Norman Borlaug</h1>
+  <p>The man who saved a billion lives</p> 
+  <div id='img-div'>
+    <figure>
+      <img id='image' src='https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg' alt='image of dr.norman seen standing on a mexican wheat field with a group of biologists'>
+      <figcaption id='img-caption'>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger. </figcaption>
+    </figure>
   </div>
-      <h3>Here's a time line of Dr. Borlaug's life:</h3>
-  <br>
-  <br>
-    <section>
-  <div class="Dates"> 
-  <ul>
-    <li> <b>1914</b> - Born in Cresco,Iowa.</li>
-    <br>
-            <li><b>1933</b> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
-       <br>
-            <li><b>1935</b> - Has to stop school and save up more 
-    money. Works in the Civilian Consecration Corps, helping starving Americans. "I saw how food changed them",he said. "All of this left scars on me."
-    <br> 
-    <li><b>1937</b> - Finishes university and takes a job in the US Forestry Service</li>
-    <br> 
-    <li><b>1938</b> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, who teaches him about breeding pest-resistent plants.</li>
-    <br> 
-    <li><b>1941</b> - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science.</li>
-    <br>
-    <li><b>1942</b> - Receives a Ph.D in Genetics and Plant Pathology</li>
-    <br>
-    <li><b>1944</b> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat-including different varieties for each major climate on Earth.</li>
-   <br>
-    <li><b>1945</b> - Discovers a way to grown wheat twice each season, doubling wheat yields.</li> 
-<br>
-    <li><b>1953</b> - Crosses a short, sturdy dwarf breed of wheat with a high-yielding American breed creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.</li>
-   <br>
-<li><b>1962</b> - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population</li>
-<br>    
-<li><b>1970</b> - Receives the <b>Nobel Peace Prize.</b></li>
-<br>    
-<li><b>1983</b> - Helps seven African countries dramatically increase their maize and sorghum yields.</li>
-<br>    
-<li><b>1984</b> - Becomes a distinguished professor at <b>Texas A&M University</b>......</li>
-<br>    
-<li><b>2005</b> - States "we will have to double the world food supply by 2050". Argues that genetically modified crops are the only wa we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
-<br>    
-<li><b>2009</b> - Dies at the age of <b>95.</b></li>
-          </div>
-      </section>
-<p class="me"> "Borlaug's life and achievement are testimony to the far-reaching contribution that<br>one man's towering intellect, persistence and scientific vision can make to human<br>peace and progress."</p>
-<br>
-<br>
-   <p><em>-- Indian Prime Minister Manmohan Singh</em></p>
-    <h3>
-    If you have time, you should read more about this incredible human being on his <a href="Wikipedia.entry"> Wikipedia entry.</a>
-  </h3>
-  </body>
+  <section id='tribute-info'>
+    <h3 id='heading'>
+      Here's a time line of Dr. Borlaug's life:
+    </h3>
+    <ul>
+      <li>
+        <strong>1914</strong>
+        - Born in Cresco, Iowa
+      </li>
+      <li>
+        <strong>1933</strong>
+        - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration" 
+      </li>
+      <li>
+        <strong>1935</strong>
+        - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me." 
+      </li>
+      <li>
+        <strong>1937</strong>
+         - Finishes university and takes a job in the US Forestry Service 
+      </li>
+      <li>
+        <strong>1938</strong>
+        - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants. 
+      </li>
+      <li>
+        <strong>1941</strong>
+        - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science. 
+      </li>
+      <li>
+        <strong>1942</strong>
+        - Receives a Ph.D. in Genetics and Plant Pathology 
+      </li>
+      <li>
+        <strong>1944</strong>
+        - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth. 
+      </li>
+      <li>
+        <strong>1945</strong>
+        - Discovers a way to grown wheat twice each season, doubling wheat yields 
+      </li>
+      <li>
+        <strong>1953</strong>
+        - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat. 
+      </li>
+      <li>
+        <strong>1962</strong>
+        - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population 
+      </li>
+      <li>
+        <strong>1970</strong>
+        - receives the Nobel Peace Prize
+      </li>
+      <li>
+        <strong>1983</strong>
+        - helps seven African countries dramatically increase their maize and sorghum yields
+      </li>
+      <li>
+        <strong>1984</strong>
+        - becomes a distinguished professor at Texas A&M University 
+      </li>
+      <li>
+        <strong>2005</strong>
+        - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds." 
+      </li>
+      <li>
+        <strong>2009</strong>
+        - dies at the age of 95.
+      </li>
+    </ul>
+    <blockquote cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
+  <p>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
+ <cite>-- Indian Prime Minister Manmohan Singh
+</cite>
+ </blockquote>
+ <h3>if you have time, you should read more about this incredible human being on his <a id='tribute-link' href='https://en.wikipedia.org/wiki/Norman_Borlaug' target="_blank" alt='link to dr.norman wikipedia page'>Wikipedia entry</a>.</h3>
+  </section>
+</main>
+</body>
 </html>
